# tinyy

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  renovate.json
.github/workflows/: build.yaml  ci.yml  deploy.yaml
tinyy_backend/: Cargo.toml  Dockerfile
tinyy_backend/migrations/2020-10-10-043206_create_tiny_url/: down.sql  up.sql
tinyy_backend/migrations/2020-11-03-032809_create_user/: up.sql
tinyy_backend/src/: config.rs  cors.rs  db.rs  errors.rs  lib.rs  main.rs  schema.rs
tinyy_backend/src/models/: mod.rs  tiny_url.rs  user.rs
tinyy_backend/src/routes/: health.rs  mod.rs  tiny_url.rs
tinyy_frontend/: Dockerfile  package.json
tinyy_frontend/public/: index.html  manifest.json
tinyy_frontend/src/: App.css  App.tsx  api.ts
tinyy_frontend/src/components/form/: Form.tsx  form.css
tinyy_frontend/src/components/hero/: Hero.tsx  hero.css
tinyy_frontend/src/components/url_table/: UrlTable.tsx  urltable.css
