[package]
name = "tinyy_backend"
version = "0.1.0"
authors = ["Den4200 <dennis@dennispham.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = { version = "1.4.0", features= ["postgres"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]
